--- a/qrc.qrc
+++ b/qrc.qrc
@@ -235,5 +235,6 @@
         <file>assets/icons/Essentials/Success.svg</file>
         <file>assets/icons/Essentials/Warning.svg</file>
         <file>assets/icons/Essentials/map-marker.png</file>
+        <file>assets/icons/Essentials/app-icon.png</file>
     </qresource>
 </RCC>
